# DLBSEPDOCD_D

./: .coverage  .dockerignore  .flake8  Dockerfile  Dockerfile.test  Jenkinsfile  README.md  docker-compose.test.yml  docker-compose.yml  e2e-test-results.xml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  pr-checks.yml  release.yml
devops_pipeline/: __init__.py  urls.py  wsgi.py
devops_pipeline/apps/auth/: apps.py  models.py  urls.py  views.py
devops_pipeline/apps/catalog/: apps.py  models.py  services.py  urls.py  views.py
devops_pipeline/apps/catalog/migrations/: 0001_initial.py
devops_pipeline/apps/logistics/: apps.py  models.py  services.py  urls.py  views.py
devops_pipeline/apps/orders/: apps.py  models.py  urls.py  views.py
devops_pipeline/apps/orders/migrations/: 0001_initial.py
devops_pipeline/settings/: base.py  test.py
docs/: TESTING_GUIDE.md
infrastructure/kubernetes/: deployment.yaml
scripts/: run_load_tests.sh  run_security_tests.sh  run_tests.sh
templates/: base.html
templates/catalog/: product_list.html
templates/orders/: order_list.html  success.html
templates/registration/: login.html
tests/e2e/: conftest.py
tests/e2e/features/: order_management.feature
tests/e2e/step_defs/: __init__.py  test_order_management.py
tests/integration/: test_ecommerce_integration.py
tests/load/: test_load_scenarios.py  test_performance.py
tests/security/: test_authentication.py  test_input_validation.py
tests/unit/: test_catalog.py
