[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devops_pipeline"]

[project]
name = "devops-pipeline"
version = "0.1.0"
description = "A comprehensive 6-layer testing pipeline for a modern DevOps project."
authors = [
    {name = "DevOps Team", email = "devops@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django~=5.0.6",
    "djangorestframework~=3.15.1",
    "psycopg2-binary~=2.9.9",
    "redis~=5.0.4",
    "uv~=0.1.37",
    "pytest~=7.4.0",
    "pytest-django~=4.8.0",
    "pytest-cov~=5.0.0",
    "pytest-mock~=3.12.0",
    "flake8~=7.0.0",
    "flake8-docstrings~=1.7.0",
    "pep8-naming~=0.14.1",
    "black~=24.4.2",
    "isort~=5.13.2",
    "requests~=2.31.0",

    "gunicorn~=22.0.0",
    "python-dotenv~=1.0.0",

    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-watch>=4.2.0",
    "pre-commit>=3.3.0",
    "django-debug-toolbar>=4.2.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "devops_pipeline.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
markers = [
    "unit",
    "integration",
]
addopts = [
    "--strict-markers",
    "--cov=devops_pipeline",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-report=term-missing",
    "--cov-branch",
    "--tb=short",
]

[tool.coverage.run]
source = ["devops_pipeline"]
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "manage.py",
    "*/settings/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = "*/.venv/*,*/migrations/*"
known_django = ["django"]
known_third_party = ["rest_framework", "redis", "celery"]
known_first_party = ["devops_pipeline", "tests"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 100
ignore = "E203,W503" 